tests/compiler/typecheck/case_exhaustiveness_array_2.kk.out
1
========

========
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_array_2.kk:5:4
  │
5 │   \_ => false
  │    ^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.

