tests/compiler/typecheck/case_exhaustiveness_array_2.kk
do
  let bar = 
    | [] => true
    | [true .._] => false
    | [false .._] => false
    | _ => false
  null